Bug 306234 - Microblogging plasmoid crashes plasma when authenticating to Twitter
Summary: Microblogging plasmoid crashes plasma when authenticating to Twitter
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-microblogging (other bugs)
Version First Reported In: 4.9.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 308030 318125 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-04 07:38 UTC by Alex Ball
Modified: 2013-07-07 19:30 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11 RC1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (16.37 KB, text/plain)
2012-09-12 09:48 UTC, Malte S. Stretz
Details
Screenshot of my Desktop (367.23 KB, image/png)
2012-09-12 09:52 UTC, Malte S. Stretz
Details
Screenshot showing bug on KDE 4.10 (Kubuntu 12.10) (412.52 KB, image/png)
2013-02-12 15:10 UTC, Alex Ioannou
Details
New crash information added by DrKonqi (12.23 KB, text/plain)
2013-03-30 14:42 UTC, Drazen Krsmanovic
Details
New crash information added by DrKonqi (12.55 KB, text/plain)
2013-04-08 17:31 UTC, Rolf Eike Beer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Ball 2012-09-04 07:38:52 UTC
Application: plasma-netbook (0.2)
KDE Platform Version: 4.9.00
Qt Version: 4.8.2
Operating System: Linux 3.4.4-030404-generic i686
Distribution: Ubuntu 12.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed:
My 'Page One' contains the Microblogging plasmoid. I switched to Page One for the first time since startup and Plasma crashed.

- What happens when trying again (in same session):
Subsequently (or after suspend-resume) instead of crashing, any time I switch to Page One or attempt to use the Microblogging plasmoid, a window pops up headed 'authorize application'; it has a big empty nothing for its contents and two buttons (OK, Cancel) neither of which do anything other than close the window. The plasmoid interface continues to function, but obviously does not interface with my Twitter account. Presumably this is the correct behaviour on the Plasma end but indicates something wrong on the plasmoid end.

-- Backtrace:
Application: Plasma Netbook Shell (plasma-netbook), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb1b0e740 (LWP 2080))]

Thread 8 (Thread 0xa9ee7b40 (LWP 2102)):
#0  0xb2d8adcd in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0xb63653b5 in do_gettime (frac=0xa9ee6fb0, sec=0xa9ee6fa8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb644f866 in QTimerInfoList::updateCurrentTime (this=0xa9502074) at kernel/qeventdispatcher_unix.cpp:343
#4  0xb644fbba in QTimerInfoList::timerWait (this=0xa9502074, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0xb644e463 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xa9ee70bc) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb644e4fd in timerSourcePrepare (source=0xa9502040, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb2cd4872 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb2cd4faf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0xb2cd5201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0xb644ef27 in QEventDispatcherGlib::processEvents (this=0xa9500468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0xb641a7ed in QEventLoop::processEvents (this=0xa9ee7240, flags=...) at kernel/qeventloop.cpp:149
#12 0xb641aa89 in QEventLoop::exec (this=0xa9ee7240, flags=...) at kernel/qeventloop.cpp:204
#13 0xb63039ec in QThread::exec (this=0x9201bb8) at thread/qthread.cpp:501
#14 0xb63f7e3d in QInotifyFileSystemWatcherEngine::run (this=0x9201bb8) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb6306e80 in QThreadPrivate::start (arg=0x9201bb8) at thread/qthread_unix.cpp:307
#16 0xb2f76d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0xb761cace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 7 (Thread 0xa94ffb40 (LWP 2103)):
#0  0xb2d8adcd in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0xb63653b5 in do_gettime (frac=0xa94fefb0, sec=0xa94fefa8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb644f866 in QTimerInfoList::updateCurrentTime (this=0xa8b02074) at kernel/qeventdispatcher_unix.cpp:343
#4  0xb644fbba in QTimerInfoList::timerWait (this=0xa8b02074, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0xb644e463 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xa94ff0bc) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb644e4fd in timerSourcePrepare (source=0xa8b02040, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb2cd4872 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb2cd4faf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0xb2cd5201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0xb644ef27 in QEventDispatcherGlib::processEvents (this=0xa8b00468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0xb641a7ed in QEventLoop::processEvents (this=0xa94ff240, flags=...) at kernel/qeventloop.cpp:149
#12 0xb641aa89 in QEventLoop::exec (this=0xa94ff240, flags=...) at kernel/qeventloop.cpp:204
#13 0xb63039ec in QThread::exec (this=0x92041a0) at thread/qthread.cpp:501
#14 0xb63f7e3d in QInotifyFileSystemWatcherEngine::run (this=0x92041a0) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb6306e80 in QThreadPrivate::start (arg=0x92041a0) at thread/qthread_unix.cpp:307
#16 0xb2f76d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0xb761cace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 6 (Thread 0xa7dffb40 (LWP 2109)):
#0  0xb771a424 in __kernel_vsyscall ()
#1  0xb2f7a96b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb762a3dc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb4faa263 in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#4  0xb4faa37f in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#5  0xb2f76d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0xb761cace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 5 (Thread 0xa74feb40 (LWP 2110)):
#0  idleTimerSourcePrepare (source=0x92e6f00, timeout=0xa74fe0ec) at kernel/qeventdispatcher_glib.cpp:208
#1  0xb2cd4872 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb2cd4faf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb2cd5201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb644ef27 in QEventDispatcherGlib::processEvents (this=0x92e50a0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0xb641a7ed in QEventLoop::processEvents (this=0xa74fe270, flags=...) at kernel/qeventloop.cpp:149
#6  0xb641aa89 in QEventLoop::exec (this=0xa74fe270, flags=...) at kernel/qeventloop.cpp:204
#7  0xb63039ec in QThread::exec (this=0x92e50d0) at thread/qthread.cpp:501
#8  0xb6303adb in QThread::run (this=0x92e50d0) at thread/qthread.cpp:568
#9  0xb6306e80 in QThreadPrivate::start (arg=0x92e50d0) at thread/qthread_unix.cpp:307
#10 0xb2f76d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#11 0xb761cace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 4 (Thread 0xa62efb40 (LWP 2116)):
#0  0xb771a424 in __kernel_vsyscall ()
#1  0xb2f7a96b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb762a3dc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb6e87029 in ?? () from /usr/lib/i386-linux-gnu/libQtScript.so.4
#4  0xb6e8706f in ?? () from /usr/lib/i386-linux-gnu/libQtScript.so.4
#5  0xb2f76d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0xb761cace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 3 (Thread 0xa1915b40 (LWP 2162)):
#0  0xb771a424 in __kernel_vsyscall ()
#1  0xb760e380 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb2ce2a7b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb2cd50ae in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb2cd556b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xa22051ba in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0xb2cf86b3 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0xb2f76d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0xb761cace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 2 (Thread 0xa878fb40 (LWP 3050)):
#0  0xb2d143bc in g_mutex_lock () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb2cd46b6 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb2cd4faf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb2cd5201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb644ef27 in QEventDispatcherGlib::processEvents (this=0xa7e03568, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0xb641a7ed in QEventLoop::processEvents (this=0xa878f270, flags=...) at kernel/qeventloop.cpp:149
#6  0xb641aa89 in QEventLoop::exec (this=0xa878f270, flags=...) at kernel/qeventloop.cpp:204
#7  0xb63039ec in QThread::exec (this=0x9fff8e8) at thread/qthread.cpp:501
#8  0xb738a4bb in Plasma::StorageThread::run (this=0x9fff8e8) at ../../plasma/private/storagethread.cpp:326
#9  0xb6306e80 in QThreadPrivate::start (arg=0x9fff8e8) at thread/qthread_unix.cpp:307
#10 0xb2f76d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#11 0xb761cace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb1b0e740 (LWP 2080)):
[KCrash Handler]
#7  QNetworkAccessManager::setCookieJar (this=0xa0e1228, cookieJar=0xa3914e8) at access/qnetworkaccessmanager.cpp:567
#8  0xa8a0eaef in KOAuth::KOAuthWebHelper::authorizeApp (this=0xa06ea30, serviceBaseUrl=..., authorizeUrl=..., pageUrl=...) at ../../../dataengines/microblog/koauthwebhelper.cpp:132
#9  0xa8a0ff0d in qt_static_metacall (_a=0xbf9033f0, _id=5, _o=0xa06ea30, _c=<optimized out>) at ./koauthwebhelper.moc:69
#10 KOAuth::KOAuthWebHelper::qt_static_metacall (_o=0xa06ea30, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbf9033f0) at ./koauthwebhelper.moc:58
#11 0xb6432cf1 in QMetaObject::activate (sender=0x9fe0108, m=0xa8a17ddc, local_signal_index=0, argv=0xbf9033f0) at kernel/qobject.cpp:3547
#12 0xa8a05355 in KOAuth::KOAuth::authorizeApp (this=0x9fe0108, _t1=..., _t2=..., _t3=...) at ./koauth.moc:126
#13 0xa8a08e62 in KOAuth::KOAuth::requestTokenFromService (this=0x9fe0108) at ../../../dataengines/microblog/koauth.cpp:217
#14 0xa8a09275 in KOAuth::KOAuth::authorize (this=0x9fe0108, serviceBaseUrl=..., user=..., password=...) at ../../../dataengines/microblog/koauth.cpp:187
#15 0xa8a09375 in qt_static_metacall (_a=0xbf903650, _id=6, _o=0x9fe0108, _c=<optimized out>) at ./koauth.moc:76
#16 KOAuth::KOAuth::qt_static_metacall (_o=0x9fe0108, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf903650) at ./koauth.moc:64
#17 0xb6432cf1 in QMetaObject::activate (sender=0x97e2970, m=0xa8a17b98, local_signal_index=0, argv=0xbf903650) at kernel/qobject.cpp:3547
#18 0xa89f0885 in TimelineSource::authorize (this=0x97e2970, _t1=..., _t2=..., _t3=...) at ./timelinesource.moc:134
#19 0xa89f08e0 in TimelineSource::startAuthorization (this=0x97e2970, user=..., password=...) at ../../../dataengines/microblog/timelinesource.cpp:168
#20 0xa89fbc59 in TimelineService::createJob (this=0xa122500, operation=..., parameters=...) at ../../../dataengines/microblog/timelineservice.cpp:67
#21 0xb73c4632 in Plasma::Service::startOperationCall (this=0xa122500, description=..., parent=0x0) at ../../plasma/service.cpp:238
#22 0xaf1d99f5 in downloadHistory (this=0x90d9a48) at ../../../applets/microblog/microblog.cpp:918
#23 MicroBlog::downloadHistory (this=0x90d9a48) at ../../../applets/microblog/microblog.cpp:899
#24 0xaf1d9fb5 in MicroBlog::readWallet (this=0x90d9a48, success=true) at ../../../applets/microblog/microblog.cpp:495
#25 0xaf1dcfa2 in qt_static_metacall (_a=0xbf903af8, _id=3, _o=0x90d9a48, _c=<optimized out>) at ./microblog.moc:90
#26 MicroBlog::qt_static_metacall (_o=0x90d9a48, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbf903af8) at ./microblog.moc:81
#27 0xb6432cf1 in QMetaObject::activate (sender=0xa118680, m=0xb6d0cab8, local_signal_index=4, argv=0xbf903af8) at kernel/qobject.cpp:3547
#28 0xb6bfff4d in KWallet::Wallet::walletOpened (this=0xa118680, _t1=true) at ./kwallet.moc:167
#29 0xb6c0003d in KWallet::Wallet::walletAsyncOpened (this=0xa118680, tId=2, handle=251506729) at ../../kdeui/util/kwallet.cpp:1598
#30 0xb6c00192 in qt_static_metacall (_a=0xbf903c14, _id=9, _o=0xa118680, _c=<optimized out>) at ./kwallet.moc:87
#31 KWallet::Wallet::qt_static_metacall (_o=0xa118680, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbf903c14) at ./kwallet.moc:72
#32 0xb6432cf1 in QMetaObject::activate (sender=0x95f44a0, m=0xb6d0d2b8, local_signal_index=4, argv=0xbf903c14) at kernel/qobject.cpp:3547
#33 0xb6c378dd in OrgKdeKWalletInterface::walletAsyncOpened (this=0x95f44a0, _t1=2, _t2=251506729) at kwallet_interface.moc:324
#34 0xb6c3a121 in OrgKdeKWalletInterface::qt_static_metacall (_o=0x95f44a0, _id=<optimized out>, _a=0xbf903fac, _c=<optimized out>) at kwallet_interface.moc:162
#35 0xb6c3a43c in OrgKdeKWalletInterface::qt_metacall (this=0x95f44a0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbf903fac) at kwallet_interface.moc:287
#36 0xb659da38 in QDBusConnectionPrivate::deliverCall (this=0x8dbe5e0, object=0x95f44a0, msg=..., metaTypes=..., slotIdx=171666440) at qdbusintegrator.cpp:947
#37 0xb65a7c8d in QDBusCallDeliveryEvent::placeMetaCall (this=0xa100100, object=0x95f44a0) at qdbusintegrator_p.h:103
#38 0xb64372bb in QObject::event (this=0x95f44a0, e=0xa100100) at kernel/qobject.cpp:1195
#39 0xb5906df4 in notify_helper (e=0xa100100, receiver=0x95f44a0, this=0x8dcbb38) at kernel/qapplication.cpp:4556
#40 QApplicationPrivate::notify_helper (this=0x8dcbb38, receiver=0x95f44a0, e=0xa100100) at kernel/qapplication.cpp:4528
#41 0xb590c15d in QApplication::notify (this=0xa100100, receiver=0x95f44a0, e=0xa100100) at kernel/qapplication.cpp:4285
#42 0xb6abbe41 in KApplication::notify (this=0x8dbe368, receiver=0x95f44a0, event=0xa100100) at ../../kdeui/kernel/kapplication.cpp:311
#43 0xb641bf4e in QCoreApplication::notifyInternal (this=0x8dbe368, receiver=0x95f44a0, event=0xa100100) at kernel/qcoreapplication.cpp:915
#44 0xb64200a8 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#45 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8d95130) at kernel/qcoreapplication.cpp:1539
#46 0xb64203dc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1432
#47 0xb644ead4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#48 postEventSourceDispatch (s=0x8dc72c0) at kernel/qeventdispatcher_glib.cpp:279
#49 0xb2cd4d86 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#50 0xb2cd5125 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#51 0xb2cd5201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#52 0xb644eec7 in QEventDispatcherGlib::processEvents (this=0x8d95ea0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#53 0xb59bfa1a in QGuiEventDispatcherGlib::processEvents (this=0x8d95ea0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#54 0xb641a7ed in QEventLoop::processEvents (this=0xbf904754, flags=...) at kernel/qeventloop.cpp:149
#55 0xb641aa89 in QEventLoop::exec (this=0xbf904754, flags=...) at kernel/qeventloop.cpp:204
#56 0xb642048a in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#57 0xb59049c4 in QApplication::exec () at kernel/qapplication.cpp:3817
#58 0xb7706139 in kdemain (argc=1, argv=0xbf9049a4) at ../../../../plasma/netbook/shell/main.cpp:79
#59 0x0804850b in main (argc=1, argv=0xbf9049a4) at plasma-netbook_dummy.cpp:3

Reported using DrKonqi
Comment 1 Malte S. Stretz 2012-09-12 09:48:31 UTC
Created attachment 73853 [details]
New crash information added by DrKonqi

plasma-desktop (0.4) on KDE Platform 4.9.00 using Qt 4.8.2

- What I was doing when the application crashed:
After not using my machine for about two weeks, I installed Kubuntu Updates, including the current version of KDE SC (bump in minor version IIRC). After a reboot and login (I've got KWM configured to auto-login), I was greeted by a Plasma (Netbook) crash. Looks like the Microblog Plasmoid was crashing.

- Custom settings of the application:
I'll attach a screenshot.

-- Backtrace (Reduced):
#6  QNetworkAccessManager::setCookieJar (this=<optimized out>, cookieJar=0x36cba60) at access/qnetworkaccessmanager.cpp:567
#7  0x00007f446c253b8d in KOAuth::KOAuthWebHelper::authorizeApp (this=0x322e710, serviceBaseUrl=..., authorizeUrl=..., pageUrl=...) at ../../../dataengines/microblog/koauthwebhelper.cpp:132
#8  0x00007f446c254df4 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./koauthwebhelper.moc:69
#9  KOAuth::KOAuthWebHelper::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./koauthwebhelper.moc:58
[...]
#11 0x00007f446c24ac5c in KOAuth::KOAuth::authorizeApp (this=<optimized out>, _t1=..., _t2=..., _t3=...) at ./koauth.moc:126
Comment 2 Malte S. Stretz 2012-09-12 09:52:30 UTC
Created attachment 73854 [details]
Screenshot of my Desktop

This should give an idea of how my Plasma is configured. Oddities: Look at the messed up notifcation area and the half-hidden Cashew at the top right. The Microblog Plasmoid is on the bottom.
Comment 3 Myriam Schweingruber 2012-09-12 10:39:48 UTC
Setting status to confirmed.
Comment 4 Jekyll Wu 2012-10-07 16:16:27 UTC
*** Bug 308030 has been marked as a duplicate of this bug. ***
Comment 5 Alex Ioannou 2013-02-12 14:43:34 UTC
Any ideas when this will be fixed?
Comment 6 Rolf Eike Beer 2013-02-12 14:51:20 UTC
> Any ideas when this will be fixed?

Looks like it has been fixed in 4.10.0, at least I don't get the crash 
anymore using that version. Can you confirm?
Comment 7 Alex Ioannou 2013-02-12 15:09:18 UTC
The bug still occurs for me in 4.10.  I'm trying to submit it using the KDE crash reporter but it's hanging.  I'm behind a proxy so that might be blocking it.
Comment 8 Alex Ioannou 2013-02-12 15:10:49 UTC
Created attachment 77221 [details]
Screenshot showing bug on KDE 4.10 (Kubuntu 12.10)
Comment 9 Drazen Krsmanovic 2013-03-30 14:42:46 UTC
Created attachment 78509 [details]
New crash information added by DrKonqi

plasma-desktop (0.4) on KDE Platform 4.10.1 using Qt 4.8.3

- What I was doing when the application crashed:

Starting up ubuntu 12.10 with KDE 4.10.0.1

-- Backtrace (Reduced):
#6  QNetworkAccessManager::setCookieJar (this=0x5411e50, cookieJar=0x540e0a0) at access/qnetworkaccessmanager.cpp:567
#7  0x00007f224d7be97e in KOAuth::KOAuthWebHelper::authorizeApp (this=0x4fcf0e0, serviceBaseUrl=..., authorizeUrl=..., pageUrl=...) at ../../../dataengines/microblog/koauthwebhelper.cpp:132
#8  0x00007f224d7bed64 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./koauthwebhelper.moc:69
#9  KOAuth::KOAuthWebHelper::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./koauthwebhelper.moc:58
[...]
#11 0x00007f224d7b5bec in KOAuth::KOAuth::authorizeApp (this=this@entry=0x5084510, _t1=..., _t2=..., _t3=...) at ./koauth.moc:126
Comment 10 Rolf Eike Beer 2013-04-08 17:31:16 UTC
Created attachment 78732 [details]
New crash information added by DrKonqi

plasma-desktop (0.4) on KDE Platform 4.10.2 "release 553" using Qt 4.8.4

This crash happened on login. Unusual was the fact that a window popped up showing a twitter page "would you like to authorize this application to access your account", disappeared, then another window showed up with the auth code, which also disappeared after a second or so. I'm not sure if these windows are cause or effect of the crash.

-- Backtrace (Reduced):
#6  QNetworkAccessManager::setCookieJar (this=0x42d9bb0, cookieJar=0x47fd7f0) at access/qnetworkaccessmanager.cpp:567
#7  0x00007f05dd6fe2be in KOAuth::KOAuthWebHelper::authorizeApp (this=0x39b4f30, serviceBaseUrl=..., authorizeUrl=..., pageUrl=...) at /usr/src/debug/kdeplasma-addons-4.10.2/dataengines/microblog/koauthwebhelper.cpp:132
#8  0x00007f05dd6fe6a4 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /usr/src/debug/kdeplasma-addons-4.10.2/build/dataengines/microblog/koauthwebhelper.moc:69
#9  KOAuth::KOAuthWebHelper::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kdeplasma-addons-4.10.2/build/dataengines/microblog/koauthwebhelper.moc:58
[...]
#11 0x00007f05dd6f552c in KOAuth::KOAuth::authorizeApp (this=this@entry=0x2b96580, _t1=..., _t2=..., _t3=...) at /usr/src/debug/kdeplasma-addons-4.10.2/build/dataengines/microblog/koauth.moc:126
Comment 11 Jekyll Wu 2013-04-10 09:31:25 UTC
*** Bug 318125 has been marked as a duplicate of this bug. ***
Comment 12 David E. Narvaez 2013-07-07 19:30:00 UTC
Git commit 15ce0a802b6d7a4d0e26cfe5f23d556f9ee7a743 by David E. Narváez.
Committed on 07/07/2013 at 19:06.
Pushed by narvaez into branch 'master'.

Avoid Double Delete of Cookie Jar

The old cookie jar is deleted internally in setCookieJar if appropiate
FIXED-IN: 4.11 RC1

M  +0    -1    dataengines/microblog/koauthwebhelper.cpp

http://commits.kde.org/kdeplasma-addons/15ce0a802b6d7a4d0e26cfe5f23d556f9ee7a743