Avoid Double Delete of Cookie Jar

The old cookie jar is deleted internally in setCookieJar if appropiate

BUG: 306234
FIXED-IN: 4.11 RC1